1.1.2 fixed today event bg row visibility bug in calendar view

--- a/sunrise.css
+++ b/sunrise.css
@@ -82,7 +82,7 @@
     margin-right:10px!important;
 }
 .st-bg-today, .st-dtitle-today, .st-bg-td-first, .st-bg-td-last { /* today */
-    background-color: #fff !important; /* blue tint: f2f8fe */
+    background-color: #f2f8fe !important; /* blue tint: f2f8fe */
 }
 .neb-when-label { /* "when" label in popover */
     display: none !important;
@@ -112,7 +112,11 @@ table,.st-dtitle,.tg-col,.tg-dualmarker60,.tg-dualmarker,.wbkt .cgd-gutter-bg-to
     padding: 3px 3px 3px 7px !important;
     margin-left: 0px;
     border-radius:0px !important;
-    box-shadow: inset 0 0 1000px 1000px rgba(255, 255, 255, 0.4) !important;
+    opacity: 0.75 !important;
+    /* box-shadow: inset 0 0 1000px 1000px rgba(255, 255, 255, 0.4) !important; */
+}
+.rb-n { /* day event text */
+    color: rgba(0, 0, 0, 0.9) !important;
 }
 .st-ad-mr, .st-ad-mr2, .st-ad-ml, .st-ad-ml2 { /* multi-line event indicator */
     display:none !important;
@@ -136,8 +140,12 @@ table,.st-dtitle,.tg-col,.tg-dualmarker60,.tg-dualmarker,.wbkt .cgd-gutter-bg-to
 .cc-titlebar {
     padding: 25px!important;
 }
-.st-dtitle-today,.st-bg-today { /* blue tint */
-    background-color: #f2f8fe !important;
+.st-dtitle-next, .st-dtitle-today
+, .st-bg-next, .st-bg-today {
+    border-left: 1px solid #eee !important;
+}
+.st-dtitle-today /*, .st-dtitle-down */ {
+    border-top: 0px solid #eee !important;
 }
 
 /* agenda view */
@@ -222,7 +230,8 @@ table,.st-dtitle,.tg-col,.tg-dualmarker60,.tg-dualmarker,.wbkt .cgd-gutter-bg-to
 .st-bg-all,.wk-full-mode .wk-today{ /* where all-day events go in agenda view */
     margin-left:-1px!important;
 }
-.st-bg-td-last, .st-dtitle-today { /* today in agenda view */
+.st-bg-td-last { /* today in agenda view */
+    /* .st-dtitle-today */
     border-right: 1px solid transparent !important;
     border-top: 1px solid transparent !important;
 }
